--- a/client/package.json
+++ b/client/package.json
@@ -10,15 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.42.1",
-    "@tailwindcss/vite": "^4.1.12",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-hot-toast": "^2.6.0",
+    "react-hot-toast": "^2.5.2",
     "react-player": "^3.3.1",
-    "react-router-dom": "^7.8.0",
-    "tailwindcss": "^4.1.12"
+    "react-router-dom": "^7.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
