--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,4 @@
-VITE_CLERK_PUBLISHABLE_KEY=pk_test_ZXZvbHZlZC1jb2QtODAuY2xlcmsuYWNjb3VudHMuZGV2JA
+VITE_CURRENCY = '$'
+
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_c3RpbGwtc2hlZXBkb2ctODkuY2xlcmsuYWNjb3VudHMuZGV2JA
+
