--- a/client/package.json
+++ b/client/package.json
@@ -10,22 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.539.0",
+    "@clerk/clerk-react": "^5.46.2",
+    "@tailwindcss/vite": "^4.1.13",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-hot-toast": "^2.5.2",
-    "react-player": "^3.3.1",
-    "react-router-dom": "^7.8.0"
+    "react-hot-toast": "^2.6.0",
+    "react-player": "^3.3.2",
+    "react-router-dom": "^7.8.2",
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
-    "@eslint/js": "^9.32.0",
-    "@types/react": "^19.1.9",
+    "@eslint/js": "^9.33.0",
+    "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^4.7.0",
-    "eslint": "^9.32.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "vite": "^7.1.0"
+    "vite": "^7.1.2"
   }
 }
